overlays/deploy/biosimulations-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.org/client-max-body-size: "600m"
  name: prod-biosimulations-ingress
spec:
  tls:
    - hosts:
        - account.api.biosimulations.org
        - api.biosimulations.org
        - run.api.biosimulations.org
        - combine.api.biosimulations.org
        - data.biosimulations.org

      secretName: biosimulations-ingress-certificate

  rules:
    - host: account.api.biosimulations.org
      http:
        paths:
          - backend:
              serviceName: account-api
              servicePort: 80

    - host: api.biosimulations.org
      http:
        paths:
          - backend:
              serviceName: combine-service
              servicePort: 80
            path: "/combine"
          - backend:
              serviceName: account-api
              servicePort: 80
            path: /account
          - backend:
              serviceName: dispatch-api
              servicePort: 80
            path: /runs
          - backend:
              serviceName: dispatch-api
              servicePort: 80
            path: /metadata
          - backend:
              serviceName: dispatch-api
              servicePort: 80
            path: /results
          - backend:
              serviceName: dispatch-api
              servicePort: 80

    - host: combine.api.biosimulations.org
      http:
        paths:
          - backend:
              serviceName: combine-service
              servicePort: 80
    - host: data.biosimulations.org
      http:
        paths:
          - backend:
              serviceName: hsds
              servicePort: 80

    - host: run.api.biosimulations.org
      http:
        paths:
          - backend:
              serviceName: dispatch-api
              servicePort: 80
