overlays/deploy/biosimulators-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.org/client-max-body-size: "600m"
  name: simulators-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - api.biosimulators.org
      secretName: biosimulators-certificate
  rules:
    - host: api.biosimulators.org
      http:
        paths:
          - backend:
              serviceName: simulators-api
              servicePort: 80
